test/sources/fail/string.ys
meth stringfail(): int{
    c: string = "hello
    world";
    yeet 0;
}